table fully working

--- a/DataBookAttempt/DataBook/views/index.html
+++ b/DataBookAttempt/DataBook/views/index.html
@@ -102,7 +102,7 @@
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="tables.html"id="tab">
           <i class="fas fa-fw fa-table"></i>
           <span>Northwind DB</span></a>
       </li>
@@ -160,11 +160,6 @@
             <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
           </div>
 
-          <!-- Content Row -->
-          <div class="row">
-
-
-
             <!-- Content Row -->
 
             <div class="row">
@@ -217,10 +212,7 @@
                     </div>
                   </div>
                 </div>
-                </div>
-            </div>
-
-            
+                </div>           
           </div>
           <!-- /.container-fluid -->
 
