--- a/DataBookAttempt/DataBook/views/tables.html
+++ b/DataBookAttempt/DataBook/views/tables.html
@@ -97,15 +97,15 @@
       <hr class="sidebar-divider">
 
       <!-- Nav Item - Charts -->
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="charts.html">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Phoenix Park Weather</span></a>
       </li>
 
       <!-- Nav Item - Tables -->
-      <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+      <li class="nav-item active">
+        <a class="nav-link" href="tables.html" id="tab">
           <i class="fas fa-fw fa-table"></i>
           <span>Northwind DB</span></a>
       </li>
@@ -192,27 +192,9 @@
             <div class="card-header py-3">
               <h6 class="m-0 font-weight-bold text-primary">Northwind products</h6>
             </div>
-            <div class="card-body" id="table">
-              <!-- <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                  <thead>
-                    <tr>
-                      <th>Product ID</th>
-                      <th>Product Name</th>
-                      <th>Units in Stock</th>
-                      <th>Unit Price</th>
-                    </tr>
-                  </thead>
-                  <tfoot>
-                    <tr>
-                      <th>Product ID</th>
-                      <th>Product Name</th>
-                      <th>Units in Stock</th>
-                      <th>Unit Price</th>
-                    </tr>
-                  </tfoot>
-                </table>
-              </div> -->
+            <div class="card-body">
+              <div class="table-responsive"  id="table">
+              </div>
             </div>
           </div>
 
