--- a/DataBookAttempt/DataBook/views/tables.html
+++ b/DataBookAttempt/DataBook/views/tables.html
@@ -102,39 +102,41 @@
         <div class="container-fluid">
 
           <!-- DataTales Example -->
-      <div id="accordianId" role="tablist" aria-multiselectable="true">
-        <div class="card">
-          <div class="card-header" role="tab" id="section1HeaderId">
-            <h5 class="mb-0">
-              <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-active="true" aria-expanded="true" aria-controls="section1ContentId">
-                <!-- <h6 class="m-0 font-weight-bold text-primary">Northwind products</h6> -->
-                Products
-              </a>
-            </h5>
-          </div>
-          <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
-            <div class="card-body">
-            <div class="table-responsive"  id="table">
+          <div id="accordianId" role="tablist" aria-multiselectable="true">
+            <div class="card">
+              <div class="card-header" role="tab" id="section1HeaderId">
+                <h5 class="mb-0">
+                  <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-active="true"
+                    aria-expanded="true" aria-controls="section1ContentId">
+                    <!-- <h6 class="m-0 font-weight-bold text-primary">Northwind products</h6> -->
+                    Products
+                  </a>
+                </h5>
               </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" role="tab" id="section2HeaderId">
-            <h5 class="mb-0">
-              <a data-toggle="collapse" data-parent="#accordianId" href="#section2ContentId" aria-expanded="true" aria-controls="section2ContentId">
-                 Customers
-              </a>
-            </h5>
-          </div>
-          <div id="section2ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
-            <div class="card-body">
-                <div class="table-responsive"  id="table2">
-            </div>
-          </div>
-        </div>
-      </div>
+              <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
+                <div class="card-body">
+                  <div class="table-responsive" id="table">
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" role="tab" id="section2HeaderId">
+                  <h5 class="mb-0">
+                    <a data-toggle="collapse" data-parent="#accordianId" href="#section2ContentId" aria-expanded="true"
+                      aria-controls="section2ContentId">
+                      Customers
+                    </a>
+                  </h5>
+                </div>
+                <div id="section2ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+                  <div class="card-body">
+                    <div class="table-responsive" id="table2">
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-          <!-- <div class="card shadow mb-4">
+              <!-- <div class="card shadow mb-4">
             <div class="card-header py-3">
               <h6 class="m-0 font-weight-bold text-primary">Northwind products</h6>
             </div>
@@ -144,11 +146,21 @@
             </div>
           </div> -->
 
+            </div>
+            <!-- /.container-fluid -->
+
+          </div>
+          <!-- End of Main Content -->
+
+
+
         </div>
-        <!-- /.container-fluid -->
+        <!-- End of Content Wrapper -->
+
+
 
       </div>
-      <!-- End of Main Content -->
+      <!-- End of Page Wrapper -->
 
       <!-- Footer -->
       <footer class="sticky-footer bg-white">
@@ -160,43 +172,37 @@
       </footer>
       <!-- End of Footer -->
 
-    </div>
-    <!-- End of Content Wrapper -->
-
-  </div>
-  <!-- End of Page Wrapper -->
-
-  <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-  </a>
+      <!-- Scroll to Top Button-->
+      <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+      </a>
 
 
 
-  <!-- Bootstrap core JavaScript-->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <!-- Bootstrap core JavaScript-->
+      <script src="/vendor/jquery/jquery.min.js"></script>
+      <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Core plugin JavaScript-->
-  <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+      <!-- Core plugin JavaScript-->
+      <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for all pages-->
-  <script src="/js/sb-admin-2.min.js"></script>
+      <!-- Custom scripts for all pages-->
+      <script src="/js/sb-admin-2.min.js"></script>
 
-  <!-- Jquery CDN -->
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+      <!-- Jquery CDN -->
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+        integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 
-  <!-- Ajax CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxy/1.6.1/scripts/jquery.ajaxy.js"></script>
+      <!-- Ajax CDN -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxy/1.6.1/scripts/jquery.ajaxy.js"></script>
 
-  <!-- Page level plugins -->
-  <script src="vendor/datatables/jquery.dataTables.min.js"></script>
-  <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+      <!-- Page level plugins -->
+      <script src="vendor/datatables/jquery.dataTables.min.js"></script>
+      <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-  <!-- Page level custom scripts -->
-  <script src="/js/demo/datatables-demo.js"></script>
-  <script src="/js/NorthDB.js"></script>
+      <!-- Page level custom scripts -->
+      <script src="/js/demo/datatables-demo.js"></script>
+      <script src="/js/NorthDB.js"></script>
 
 </body>
 
